--- a/src/components/Alert.module.css
+++ b/src/components/Alert.module.css
@@ -1,79 +1,79 @@
 :root {
-  --theme-scale1: var(--violet1);
-  --theme-scale2: var(--violet2);
-  --theme-scale3: var(--violet3);
-  --theme-scale4: var(--violet4);
-  --theme-scale5: var(--violet5);
-  --theme-scale6: var(--violet6);
-  --theme-scale7: var(--violet7);
-  --theme-scale8: var(--violet8);
-  --theme-scale9: var(--violet9);
-  --theme-scale10: var(--violet10);
-  --theme-scale11: var(--violet11);
-  --theme-scale12: var(--violet12);
+  --theme-scale1: hsl(255, 65%, 99.4%);
+  --theme-scale2: hsl(252, 100%, 99%);
+  --theme-scale3: hsl(252, 96.9%, 97.4%);
+  --theme-scale4: hsl(252, 91.5%, 95.5%);
+  --theme-scale5: hsl(252, 85.1%, 93%);
+  --theme-scale6: hsl(252, 77.8%, 89.4%);
+  --theme-scale7: hsl(252, 71%, 83.7%);
+  --theme-scale8: hsl(252, 68.6%, 76.3%);
+  --theme-scale9: hsl(252, 56%, 57.5%);
+  --theme-scale10: hsl(251, 48.1%, 53.5%);
+  --theme-scale11: hsl(250, 43%, 48%);
+  --theme-scale12: hsl(254, 60%, 18.5%);
 
-  color: var(--gray12);
-  background-color: var(--gray1);
+  color: var(--theme-scale12);
+  background-color: var(--theme-scale1);
 }
 
 .info {
-  --theme-scale1: var(--blue1);
-  --theme-scale2: var(--blue2);
-  --theme-scale3: var(--blue3);
-  --theme-scale4: var(--blue4);
-  --theme-scale5: var(--blue5);
-  --theme-scale6: var(--blue6);
-  --theme-scale7: var(--blue7);
-  --theme-scale8: var(--blue8);
-  --theme-scale9: var(--blue9);
-  --theme-scale10: var(--blue10);
-  --theme-scale11: var(--blue11);
-  --theme-scale12: var(--blue12);
+  --theme-scale1: hsl(206, 100%, 99.2%);
+  --theme-scale2: hsl(210, 100%, 98%);
+  --theme-scale3: hsl(209, 100%, 96.5%);
+  --theme-scale4: hsl(210, 98.8%, 94%);
+  --theme-scale5: hsl(209, 95%, 90.1%);
+  --theme-scale6: hsl(209, 81.2%, 84.5%);
+  --theme-scale7: hsl(208, 77.5%, 76.9%);
+  --theme-scale8: hsl(206, 81.9%, 65.3%);
+  --theme-scale9: hsl(206, 100%, 50%);
+  --theme-scale10: hsl(208, 100%, 47.3%);
+  --theme-scale11: hsl(211, 100%, 43.2%);
+  --theme-scale12: hsl(211, 100%, 15%);
 }
 
 .success {
-  --theme-scale1: var(--grass1);
-  --theme-scale2: var(--grass2);
-  --theme-scale3: var(--grass3);
-  --theme-scale4: var(--grass4);
-  --theme-scale5: var(--grass5);
-  --theme-scale6: var(--grass6);
-  --theme-scale7: var(--grass7);
-  --theme-scale8: var(--grass8);
-  --theme-scale9: var(--grass9);
-  --theme-scale10: var(--grass10);
-  --theme-scale11: var(--grass11);
-  --theme-scale12: var(--grass12);
+  --theme-scale1: hsl(116, 50%, 98.9%);
+  --theme-scale2: hsl(120, 60%, 97.1%);
+  --theme-scale3: hsl(120, 53.6%, 94.8%);
+  --theme-scale4: hsl(121, 47.5%, 91.4%);
+  --theme-scale5: hsl(122, 42.6%, 86.5%);
+  --theme-scale6: hsl(124, 39%, 79.7%);
+  --theme-scale7: hsl(126, 37.1%, 70.2%);
+  --theme-scale8: hsl(131, 38.1%, 56.3%);
+  --theme-scale9: hsl(131, 41%, 46.5%);
+  --theme-scale10: hsl(132, 43.1%, 42.2%);
+  --theme-scale11: hsl(133, 50%, 32.5%);
+  --theme-scale12: hsl(130, 30%, 14.9%);
 }
 
 .warning {
-  --theme-scale1: var(--orange1);
-  --theme-scale2: var(--orange2);
-  --theme-scale3: var(--orange3);
-  --theme-scale4: var(--orange4);
-  --theme-scale5: var(--orange5);
-  --theme-scale6: var(--orange6);
-  --theme-scale7: var(--orange7);
-  --theme-scale8: var(--orange8);
-  --theme-scale9: var(--orange9);
-  --theme-scale10: var(--orange10);
-  --theme-scale11: var(--orange11);
-  --theme-scale12: var(--orange12);
+  --theme-scale1: hsl(24, 70%, 99%);
+  --theme-scale2: hsl(24, 83.3%, 97.6%);
+  --theme-scale3: hsl(24, 100%, 95.3%);
+  --theme-scale4: hsl(25, 100%, 92.2%);
+  --theme-scale5: hsl(25, 100%, 88.2%);
+  --theme-scale6: hsl(25, 100%, 82.8%);
+  --theme-scale7: hsl(24, 100%, 75.3%);
+  --theme-scale8: hsl(24, 94.5%, 64.3%);
+  --theme-scale9: hsl(24, 94%, 50%);
+  --theme-scale10: hsl(24, 100%, 46.5%);
+  --theme-scale11: hsl(24, 100%, 37%);
+  --theme-scale12: hsl(15, 60%, 17%);
 }
 
 .error {
-  --theme-scale1: var(--red1);
-  --theme-scale2: var(--red2);
-  --theme-scale3: var(--red3);
-  --theme-scale4: var(--red4);
-  --theme-scale5: var(--red5);
-  --theme-scale6: var(--red6);
-  --theme-scale7: var(--red7);
-  --theme-scale8: var(--red8);
-  --theme-scale9: var(--red9);
-  --theme-scale10: var(--red10);
-  --theme-scale11: var(--red11);
-  --theme-scale12: var(--red12);
+  --theme-scale1: hsl(359, 100%, 99.4%);
+  --theme-scale2: hsl(359, 100%, 98.6%);
+  --theme-scale3: hsl(360, 100%, 96.8%);
+  --theme-scale4: hsl(360, 97.9%, 94.8%);
+  --theme-scale5: hsl(360, 90.2%, 91.9%);
+  --theme-scale6: hsl(360, 81.7%, 87.8%);
+  --theme-scale7: hsl(359, 74.2%, 81.7%);
+  --theme-scale8: hsl(359, 69.5%, 74.3%);
+  --theme-scale9: hsl(358, 75%, 59%);
+  --theme-scale10: hsl(358, 69.4%, 55.2%);
+  --theme-scale11: hsl(358, 65%, 48.7%);
+  --theme-scale12: hsl(354, 50%, 14.6%);
 }
 
 .container {
