--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   margin-block: 0.5rem;
-  border: 3px solid var(--violet7);
+  border: 3px solid var(--theme-scale7);
   max-width: 100%;
   border-radius: 5px;
 }
@@ -18,6 +18,7 @@
 }
 
 .search-button {
+  border: none;
   aspect-ratio: 1;
   width: 1rem;
   margin: 0.5rem;
