--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -1,19 +1,19 @@
 :root {
-  --theme-scale1: var(--violet1);
-  --theme-scale2: var(--violet2);
-  --theme-scale3: var(--violet3);
-  --theme-scale4: var(--violet4);
-  --theme-scale5: var(--violet5);
-  --theme-scale6: var(--violet6);
-  --theme-scale7: var(--violet7);
-  --theme-scale8: var(--violet8);
-  --theme-scale9: var(--violet9);
-  --theme-scale10: var(--violet10);
-  --theme-scale11: var(--violet11);
-  --theme-scale12: var(--violet12);
+  --theme-scale1: hsl(255, 65%, 99.4%);
+  --theme-scale2: hsl(252, 100%, 99%);
+  --theme-scale3: hsl(252, 96.9%, 97.4%);
+  --theme-scale4: hsl(252, 91.5%, 95.5%);
+  --theme-scale5: hsl(252, 85.1%, 93%);
+  --theme-scale6: hsl(252, 77.8%, 89.4%);
+  --theme-scale7: hsl(252, 71%, 83.7%);
+  --theme-scale8: hsl(252, 68.6%, 76.3%);
+  --theme-scale9: hsl(252, 56%, 57.5%);
+  --theme-scale10: hsl(251, 48.1%, 53.5%);
+  --theme-scale11: hsl(250, 43%, 48%);
+  --theme-scale12: hsl(254, 60%, 18.5%);
 
-  color: var(--gray12);
-  background-color: var(--gray1);
+  color: var(--theme-scale12);
+  background-color: var(--theme-scale1);
 }
 
 .page-container {
