Fix green in form

--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -12,6 +12,19 @@
   --theme-scale11: hsl(250, 43%, 48%);
   --theme-scale12: hsl(254, 60%, 18.5%);
 
+  --grass1: hsl(116, 50%, 98.9%);
+  --grass2: hsl(120, 60%, 97.1%);
+  --grass3: hsl(120, 53.6%, 94.8%);
+  --grass4: hsl(121, 47.5%, 91.4%);
+  --grass5: hsl(122, 42.6%, 86.5%);
+  --grass6: hsl(124, 39%, 79.7%);
+  --grass7: hsl(126, 37.1%, 70.2%);
+  --grass8: hsl(131, 38.1%, 56.3%);
+  --grass9: hsl(131, 41%, 46.5%);
+  --grass10: hsl(132, 43.1%, 42.2%);
+  --grass11: hsl(133, 50%, 32.5%);
+  --grass12: hsl(130, 30%, 14.9%);
+
   color: var(--theme-scale12);
   background-color: var(--theme-scale1);
 }
